# xArtists

./: .env  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_LOG.md  DEPLOY_CONTRACTS.md  DEPLOY_TRIGGER.md  DEPLOY_TRIGGER_NOW.md  LICENSE  MAINNET_PRODUCTION.md  README.md  README_LIA.md  REDEPLOY_TRIGGER.txt  RELEASE-1.0.2.md  RELEASE_NOTES.md  deploy-contracts.sh  index.html  inputs.py  package-lock.json  package.json  release-please-config.json  vite.config.ts  vite.config.ts.timestamp-1758488286797-39fa7d13b78ca8.mjs
.github/: dependabot.yml  lighthouse-config.json
.github/workflows/: ci-cd.yml  deploy-frontend.yml  pages.yml  release-please.yml  rust.yml  static.yml
apps/frontend/: package.json  tailwind.config.js  vite.config.ts
archive/: ARCHIVED_DEPLOY_NOTES.md
bot-discord/: index.js  package.json
contracts/: README.md
contracts/fractional-ownership/: Cargo.toml
contracts/nft-staking/: Cargo.toml
contracts/tro-staking/: Cargo.toml
data/: battle_of_nodes.json  lia_v5_status.json  lia_v6_status.json  xartists_onchain.json
docs/: ANALYSE_DAPP_COMPLETE.md  CNAME  DEPLOYMENT.md  REPOSITORY_AUDIT.md  index.html
nodes/: custom_mx_contract_nodes.py  universal_brain_unified.py  universal_executor.py
src/: App.css  App.tsx  index.css  main.tsx
src/components/: WalletConnect.css  WalletConnect.tsx
src/features/: AIAgent.tsx  AuthenticationMintingDemo.tsx  BurnifyDemo.tsx  DAOGovernanceDemo.tsx  DemoDropdownMenu.css  DemoDropdownMenu.tsx  DemoFeature.css  (+11 more)
xArtists-master/: .gitignore  deploy.sh
(+56 files in other folders)
